AST optimization: constant folding

--- a/msvc/ogl_app/ogl_app.vcxproj
+++ b/msvc/ogl_app/ogl_app.vcxproj
@@ -434,6 +434,7 @@
     <ClInclude Include="..\..\..\common\opengl.hpp" />
     <ClInclude Include="..\..\..\common\opengl_text.hpp" />
     <ClInclude Include="..\..\..\common\window.hpp" />
+    <ClInclude Include="..\..\codegen.hpp" />
     <ClInclude Include="..\..\equations.hpp" />
     <ClInclude Include="..\..\execute.hpp" />
     <ClInclude Include="..\..\parse.hpp" />
